# file-stats-api

./: .dockerignore  DEPLOYMENT.md  Dockerfile  Makefile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
